--- a/chocological/src/styles/css/App.css
+++ b/chocological/src/styles/css/App.css
@@ -1,8 +1,17 @@
+body {
+  background-image: url('/background/cafeleblanc.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center right; /* Foca mais na direita */
+  background-attachment: fixed;     /* Opcional: efeito parallax suave */
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+
 }
 
 .logo {
