--- a/chocological/src/styles/css/App.css
+++ b/chocological/src/styles/css/App.css
@@ -4,12 +4,13 @@ body {
   background-size: cover;
   background-position: center right; /* Foca mais na direita */
   background-attachment: fixed;     /* Opcional: efeito parallax suave */
+  margin: 0;
 }
 
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 
 }
