--- a/chocological/src/styles/css/components/DateCustom.css
+++ b/chocological/src/styles/css/components/DateCustom.css
@@ -36,6 +36,7 @@ body {
   width: fit-content;
   position: absolute;
   background-color: aquamarine;
+  margin: 6rem 0rem 0rem 4rem;
 }
 .DateTime #date {
   display: flex;
@@ -247,7 +248,7 @@ body {
   position: relative;
   -webkit-text-stroke: 10px #000;
   z-index: 4;
-  transform: translate(190px, -60px) rotate(-10deg);
+  transform: translate(200px, -60px) rotate(-10deg);
 }
 .DateTime .TimeNow-Container .p-TimeNow-stroke {
   font-family: "Martir";
@@ -255,14 +256,14 @@ body {
   position: relative;
   -webkit-text-stroke: 12px #fff;
   z-index: 3;
-  transform: translate(190px, -60px) rotate(-10deg);
+  transform: translate(200px, -60px) rotate(-10deg);
 }
 .DateTime .Season-Container {
   line-height: 0;
   position: absolute;
   z-index: 2;
   background-color: #fff;
-  width: 120px;
+  width: 130px;
   height: 60px;
   transform: translate(63px, -49px) rotate(-11deg);
   overflow: hidden;
@@ -272,7 +273,7 @@ body {
   width: fit-content;
   height: fit-content;
   scale: 0.1;
-  transform: translate(-1680px, -2250px);
+  transform: translate(-1530px, -2250px);
 }
 
 /*# sourceMappingURL=DateCustom.css.map */
