--- a/chocological/src/styles/css/components/Chocolate.css
+++ b/chocological/src/styles/css/components/Chocolate.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .chocolate {
   width: 100vw;
   height: 100vh;
@@ -17,6 +18,51 @@
   display: block;
 }
 
+.explosion {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: auto;
+  position: relative;
+  scale: 3;
+  z-index: 5;
+}
+.explosion img {
+  width: auto;
+  height: auto;
+  max-width: none;
+  max-height: none;
+  display: block;
+}
+
+.shokoDrawn {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80vw; /* valor padrão para mobile */
+  z-index: 1000;
+}
+
+.shokoDrawn img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.shokoName {
+  position: absolute;
+  bottom: -38px;
+  right: 12px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: white;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+  font-family: "Segoe UI", sans-serif;
+}
+
 @media (min-width: 768px) {
   .chocolate {
     position: fixed;
@@ -24,6 +70,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
     overflow: visible;
+  }
+}
+@media (min-width: 768px) and (min-width: 768px) {
+  .shokoDrawn {
+    width: 50vw; /* 50% da tela no desktop */
   }
 }
 
