--- a/chocological/src/styles/css/App.css
+++ b/chocological/src/styles/css/App.css
@@ -33,7 +33,7 @@ body {
   padding: 12px 24px;
   border-radius: 40px;
   border: none;
-  background: linear-gradient(135deg, #3498db, #6dd5fa);
+  background: linear-gradient(135deg,rgb(219, 52, 52),rgb(250, 109, 109));
   color: #fff;
   font-size: 1rem;
   font-weight: 500;
@@ -44,7 +44,7 @@ body {
 }
 
 .btn-rounded:hover {
-  background: linear-gradient(135deg, #2980b9, #57c4f0);
+  background: linear-gradient(135deg,rgb(185, 41, 41),rgb(240, 87, 87));
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
   transform: translateY(-2px);
 }
